tests/codegen/fail/interface/struct/derive_field_non_output_return_type.rs
use juniper::{GraphQLInputObject, GraphQLInterface};

#[derive(GraphQLInputObject)]
pub struct ObjB {
    id: i32,
}

#[derive(GraphQLInterface)]
struct Character {
    id: ObjB,
}

fn main() {}
