tests/codegen/fail/interface/struct/derive_field_non_output_return_type.stderr
error[E0277]: the trait bound `ObjB: IsOutputType<__S>` is not satisfied
 --> fail/interface/struct/derive_field_non_output_return_type.rs:8:10
  |
8 | #[derive(GraphQLInterface)]
  |          ^^^^^^^^^^^^^^^^ the trait `IsOutputType<__S>` is not implemented for `ObjB`
  |
  = help: the following other types implement trait `IsOutputType<S>`:
            <&T as IsOutputType<S>>
            <Arc<T> as IsOutputType<S>>
            <Argument<'a, S> as IsOutputType<S>>
            <Box<T> as IsOutputType<S>>
            <CharacterValueEnum as IsOutputType<__S>>
            <EnumValue as IsOutputType<__S>>
            <ID as IsOutputType<__S>>
            <SchemaType<'a, S> as IsOutputType<S>>
          and $N others
